add testcontainers, test configuration, add it tests, start implementing logic
